--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,19 @@
 #game{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	border: solid 1px #a4a4a4;
+	/*border: solid 1px #a4a4a4;*/
+    width: 900px;
+	image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -o-crisp-edges;
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+body{
+    overflow: hidden;
+    margin: 0;
+    background-color: rgb(36, 36, 41);
 }
