--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 #game{
 	/*border: solid 1px #a4a4a4;*/
-    width: 900px;
+    max-width: 800px;
+    width: 100%;
 	image-rendering: optimizeSpeed;
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
@@ -11,9 +12,9 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    border: solid 1px #a4a4a4;
 }
 body{
     overflow: hidden;
     margin: 0;
-    background-color: rgb(36, 36, 41);
 }
