--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,3 @@
-#game{
-	/*border: solid 1px #a4a4a4;*/
-    max-width: 800px;
-    width: 100%;
-	image-rendering: optimizeSpeed;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: -o-crisp-edges;
-    image-rendering: crisp-edges;
-    -ms-interpolation-mode: nearest-neighbor;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border: solid 1px #a4a4a4;
-}
-body{
-    overflow: hidden;
-    margin: 0;
+#canvas {
+    border: solid 1px gray;
 }
